src/components/HotkeysPanel/HotkeysPanel.module.scss
@use '../variables';

$block: '.#{variables.$ns}hotkeys-panel';

#{$block} {
    position: fixed;
    inset: 0;

    --hotkeys-panel-width: 400px;
    --hotkeys-panel-vertical-padding: 18px;
    --hotkeys-panel-horizontal-padding: var(--g-spacing-6);

    &__drawer-item {
        width: var(--hotkeys-panel-width);
        padding: var(--hotkeys-panel-vertical-padding) 0;
        box-sizing: border-box;
    }

    &__drawer-content {
        height: 100%;
        min-height: 0;
        display: flex;
        flex-direction: column;
    }

    &__title {
        margin: 0 var(--hotkeys-panel-horizontal-padding) var(--g-spacing-4)
            var(--hotkeys-panel-horizontal-padding);
        display: flex;
        gap: var(--g-spacing-2);
        align-items: baseline;
        justify-content: space-between;
    }

    &__search {
        padding: 0 var(--hotkeys-panel-horizontal-padding);
        margin-bottom: var(--g-spacing-4);
        box-sizing: border-box;
    }

    &__list {
        flex: 1;
        min-height: 0;
        overflow-y: auto;
    }

    &__item[class] {
        height: auto;
        padding: var(--g-spacing-2) 0;
        margin: 0 var(--hotkeys-panel-horizontal-padding);

        &:global(.g-list__item_active),
        &:hover {
            background: inherit;
        }

        &:not(:first-child):has(#{$block}__item-content_type_group) {
            border-top: 1px solid var(--g-color-line-generic);
            margin-top: var(--g-spacing-3);
            padding-top: var(--g-spacing-4);
        }
    }

    &__item-content {
        display: flex;
        align-items: baseline;
        justify-content: space-between;
        margin: 0;

        width: 100%;

        color: var(--g-color-text-primary);
    }

    &__item-hint {
        margin-left: var(--g-spacing-1);
    }

    &__item-hint-tooltip {
        max-width: 217px;
    }

    &__hotkey {
        color: var(--g-color-text-complementary);
    }
}

